--- a/sandbox/templates/sandbox/home.html
+++ b/sandbox/templates/sandbox/home.html
@@ -16,5 +16,22 @@
     </div>
 </article>
 {% endfor %}
-
+{% if is_paginated %}
+{% if page_obj.has_previous %}
+<a class="btn btn-outline-info mb-4" href="?page=1">
+    First
+</a>
+<a class="btn btn-outline-info mb-4" href="?page={{page_obj.previous_page_number}}">
+    Previous </a>
+{% endif %}
+<a class="btn btn-outline-info mb-4">{{page_obj.number}}</a>
+{% if page_obj.has_next %}
+<a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">
+    Next
+</a>
+<a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">
+    Last
+</a>
+{% endif %}
+{% endif %}
 {% endblock content %}
